# MatrixTool

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/src/ffmpeg/: ffmpeg_cmd.c  ffmpeg_jni_define.h
app/src/main/cpp/src/ffmpeg/metadata/: ffmpeg_media_retriever.c  media_retriever.cpp  media_retriever.h  media_retriever_jni.cpp
app/src/main/java/com/matrix/matrixtool/Ui/Activity/: BaseActivity.java  CompressImageActivity.java  MainActivity.java
app/src/main/java/com/matrix/matrixtool/Ui/Activity/Tools/: ActivityUtil.java
app/src/main/java/com/matrix/matrixtool/Ui/Fragment/: MainFragment.java  MoreFragment.java  UserFragment.java
app/src/main/java/com/matrix/matrixtool/UiTools/: CircleImageView.java  MatrixDialog.java  MatrixDialogManager.java  MatrixToast.java
app/src/main/java/com/matrix/matrixtool/UtilTools/: FileUtil.java  ImageTool.java  StreamTool.java  StringUtil.java  TimeTool.java
app/src/main/res/anim/: popup_selector_image_hidden_anim.xml  popup_selector_image_show_anim.xml
app/src/main/res/drawable/: border_input_box.xml  bottom_menu_navigation.xml  btn_add_article.xml  btn_back_blue.xml  btn_back_gray.xml  btn_back_gresn.xml  btn_bg_creative.xml  btn_cancel.xml  btn_cancel_back_effect.xml  btn_common_back_effect.xml  btn_rectangle_effect.xml  btn_register.xml  btn_register_back_effect.xml  lay_back_adv.xml  lay_back_blue.xml  lay_back_brown.xml  lay_back_gray.xml  lay_back_matrix_toast.xml  lay_back_teal.xml  lay_back_white.xml  lay_back_yellow.xml  lay_image_back.xml  lay_read_back.xml  longin_ok_btn.xml  rectangle_blue_200.xml  rectangle_teal_a100.xml
app/src/main/res/layout/: activity_base.xml  activity_compress_image.xml  activity_main.xml  fragment_more.xml  fragment_user.xml  view_matrix_toast.xml  view_selectimage_window.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  style.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
